CRUD completo y funcional de todas las entidades, manejo de JWT totalmente util.